--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css"
       rel="stylesheet"
     />
-    <link href="site.css" rel="stylesheet" />
+    <link href="main_page.css" rel="stylesheet" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
