--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,8 @@
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css"
       rel="stylesheet"
     />
-    <link href="main_page.css" rel="stylesheet" />
+    <!-- <link href="main_page.css" rel="stylesheet" /> -->
+    <link rel="icon" href="https://fontawesome.com/icons/bars?style=solid">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
