--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,7 +40,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div id='geocoder' class='geocoder'></div>
+    <!-- <div id='geocoder' class='header-left geocoder'></div> -->
+
       
     <!--
       This HTML file is a template.
