--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,13 +9,15 @@
       rel="stylesheet"
     />
 
-
-    <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.min.js'></script>
-    <link rel='stylesheet'
-      href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css' type='text/css' />
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css"
+      type="text/css"
+    />
 
     <!-- <link href="main_page.css" rel="stylesheet" /> -->
-    <link rel="icon" href="https://fontawesome.com/icons/bars?style=solid">
+    <link rel="icon" href="https://fontawesome.com/icons/bars?style=solid" />
 
     <meta name="theme-color" content="#000000" />
     <meta
@@ -42,8 +44,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div id='geocoder' class='geocoder'></div>
-      
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
