--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,11 @@
       href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css"
       type="text/css"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- <link href="main_page.css" rel="stylesheet" /> -->
     <link rel="icon" href="https://fontawesome.com/icons/bars?style=solid" />
