--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="shortcut icon" type="image/png" href="frontend/public/avatars-000128221825-n9u8wy-t500x500.jpg"/>
+
     <link
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css"
       rel="stylesheet"
