--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
 
-    <link rel="shortcut icon" type="image/x-icon" href="./frontend/public/avatars-000128221825-n9u8wy-t500x500.jpg">
-
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.jpg" /> -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -26,7 +26,6 @@
       rel="stylesheet"
     />
 
-    <!-- <link href="main_page.css" rel="stylesheet" /> -->
     <link rel="icon" href="https://fontawesome.com/icons/bars?style=solid" />
 
     <meta name="theme-color" content="#000000" />
@@ -34,35 +33,29 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+        <meta property="og:title" content="Busque for Buskers" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+
+    <meta
+       property="og:description"
+       content="Busque is an app desigined to help buskers plan there perfomances and connect with other performers"
+    />
+        <!-- <meta property="og:image" content="home_linkedin.png" />  put screenshot in here to render on linkedin--> 
+
+    <meta
+       property="og:url"
+       content="https://busque-app.herokuapp.com/"
+    />
+
+    
+   
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+   
     <title>Busque for Buskers</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+   
   </body>
 </html>
