fix css modal styling (lines)

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
 
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-<link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,29 +33,22 @@
       name="description"
       content="Web site created using create-react-app"
     />
-        <meta property="og:title" content="Busque for Buskers" />
-
-
-    <meta
-       property="og:description"
-       content="Busque is an app desigined to help buskers plan there perfomances and connect with other performers"
-    />
-        <!-- <meta property="og:image" content="home_linkedin.png" />  put screenshot in here to render on linkedin--> 
+    <meta property="og:title" content="Busque for Buskers" />
 
     <meta
-       property="og:url"
-       content="https://busque-app.herokuapp.com/"
+      property="og:description"
+      content="Busque is an app desigined to help buskers plan there perfomances and connect with other performers"
     />
+    <meta property="og:image" content="home_linkedin.png" />
 
-    
-   
+    <meta property="og:url" content="https://busque-app.herokuapp.com/" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
+
     <title>Busque for Buskers</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   
   </body>
 </html>
