add engineer page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,7 +27,7 @@
     />
 
     <!-- <link href="main_page.css" rel="stylesheet" /> -->
-    <link rel="icon" href="https://fontawesome.com/icons/bars?style=solid" />
+    <script src="https://kit.fontawesome.com/a0eb89e62e.js" crossorigin="anonymous"></script>
 
     <meta name="theme-color" content="#000000" />
     <meta
