add engineer link and page, fix navmodal bug

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -37,7 +37,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Roboto&display=swap" rel="stylesheet">
 
-    <link rel="icon" href="https://fontawesome.com/icons/bars?style=solid" />
+    <!-- <link href="main_page.css" rel="stylesheet" /> -->
+    <script src="https://kit.fontawesome.com/a0eb89e62e.js" crossorigin="anonymous"></script>
 
     <meta name="theme-color" content="#000000" />
     <meta
