fix linkedin photo

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -51,7 +51,7 @@
       property="og:description"
       content="Busque is an app desigined to help buskers plan there perfomances and connect with other performers"
     />
-    <meta property="og:image" content="home_linkedin.png" />
+    <meta property="og:image" content="frontend/public/home_linkedin.png" />
 
     <meta property="og:url" content="https://busque-app.herokuapp.com/" />
 
